# IVaction

./: README.md  action.sh  action.yaml
.github/workflows/: ci_on_pr.yml  cron_daily_check_tag.yml
cpm_check_version/: CMakeLists.txt  isNewestVersion.sh
fix_dependency_file/: isRemoteNewestVersion.sh  listAllGitRepositories.sh  updatePackagesAndPR.sh
linux-testing/: action.yaml
macos-testing/: action.yaml
msvc-testing/: action.yaml
test-base64-error/: CMakeLists.txt  test.cpp
test-project2/: test.cpp  test2.cpp
test-project_with_omp/: CMakeLists.txt  test.cpp
test-with_empty_archive/: CMakeLists.txt  test.cpp  test2.cpp  test3.cpp
ubuntu-22.04/: action.yaml
windows-2022/: action.yaml
